syntax = "proto3";

package services.dmv;

import "resources/common/database/database.proto";
import "resources/vehicles/vehicles.proto";
import "validate/validate.proto";

option go_package = "github.com/fivenet-app/fivenet/gen/go/proto/services/dmv;dmv";

message ListVehiclesRequest {
  resources.common.database.PaginationRequest pagination = 1 [(validate.rules).message.required = true];
  optional resources.common.database.Sort sort = 2;
  // Search params
  optional string license_plate = 3 [(validate.rules).string.max_len = 32];
  optional string model = 4 [(validate.rules).string.max_len = 32];
  optional int32 user_id = 5;
}

message ListVehiclesResponse {
  resources.common.database.PaginationResponse pagination = 1;
  repeated resources.vehicles.Vehicle vehicles = 2;
}

service DMVService {
  // @perm
  rpc ListVehicles(ListVehiclesRequest) returns (ListVehiclesResponse);
}
